feature: logo. sidebar toggle service, navbar UI

--- a/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
+++ b/frontend/src/app/layouts/primary-layout/components/mobile-sidebar/mobile-sidebar.component.html
@@ -1,5 +1,5 @@
 <button class="toggle_button" (click)="toggleMobileSidebar(true)">
-  <app-icon icon="menu_open" [size]="26"></app-icon>
+  <app-icon icon="menu" [size]="26"></app-icon>
 </button>
 
 <ng-container *ngIf="open">
