--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -49,7 +49,7 @@ $breakpoints: (
 //   ),
 // );
 
-$primary: #0a7549;
+$primary: #068e44;
 $primary-dark: #053b25;
 $primary-light: #3b916d;
 
@@ -59,7 +59,7 @@ $primary-accent-light: #ba859b;
 
 $background: #1b1b1b;
 $background-sidebar: #1b1b1b;
-$background-light: #fff;
+$background-light: rgb(248, 249, 250);
 $background-navbar: #1b1b1b;
 $border-color: #dde4e1;
 $border-color-dark: #aab1ae;
