--- a/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
+++ b/frontend/src/app/layouts/primary-layout/components/navbar/navbar.component.scss
@@ -6,14 +6,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 22px;
-  background: $background-navbar;
-  color: #fff;
+  padding: 10px 22px;
+  background: #fff;
+  color: $text-black;
   z-index: 5;
   gap: 12px;
+  border-bottom: 1px solid $border-color;
 
   @media (max-width: $sm) {
-    padding: 8px;
+    padding: 12px;
   }
 
   &__header {
@@ -65,6 +66,12 @@
     @media (max-width: $sm) {
       gap: 6px;
     }
+
+    &-icons {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
   }
 
   mat-menu {
@@ -103,7 +110,7 @@
       border-radius: 10px;
 
       &:hover {
-        background: #393837;
+        background: $background-light;
       }
     }
 
@@ -131,10 +138,19 @@
       text-overflow: ellipsis;
     }
   }
+
+  &__sidebar-toggle {
+    display: flex;
+    align-items: center;
+
+    @media screen and (max-width: $sm) {
+      display: none;
+    }
+  }
 }
 
 .bg-icon {
-  background: #393837;
+  background: $background-light;
   padding: 10px;
   border-radius: 14px;
   display: flex;
@@ -143,7 +159,7 @@
 }
 
 .bell-icon {
-  color: #bbbbbb;
+  color: #464646;
   font-size: 20px;
   width: 20px;
   height: 20px;
