--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.scss
@@ -50,9 +50,10 @@
 
     &-item {
       border-radius: 6px;
-      background: $background;
+      background: #fff;
       padding: 22px;
-      color: $text-white;
+      color: $text-black;
+      border: 1px solid $border-color;
 
       &:nth-child(1) {
         background: $primary;
@@ -78,7 +79,7 @@
       &-number {
         margin-top: 4px;
         font-size: 12px;
-        color: $text-white;
+        color: #9c9c9c;
       }
     }
   }
