refactor: teams modules refactoring

--- a/frontend/src/app/auth/pages/teams-invitations/teams-invitations.component.html
+++ b/frontend/src/app/auth/pages/teams-invitations/teams-invitations.component.html
@@ -14,7 +14,7 @@
       Now you can move to navigation bar to see more details
     </p>
 
-    <a class="ti__button" routerLink="/app">Go to App</a>
+    <a class="ti__button" routerLink="/hub">Return to HUB</a>
   </ng-container>
 
   <ng-container *ngIf="!isSuccess && !isLoading">
