--- a/frontend/src/app/events/components/events-toolbar/events-toolbar.component.html
+++ b/frontend/src/app/events/components/events-toolbar/events-toolbar.component.html
@@ -13,7 +13,7 @@
       icon="add"
       (click)="onCreateButtonClick($event)"
     >
-      <p>Add New</p>
+      <p>Add</p>
     </app-button>
   </div>
 </div>
