--- a/frontend/src/app/overview/pages/overview-home/overview-home.component.html
+++ b/frontend/src/app/overview/pages/overview-home/overview-home.component.html
@@ -77,21 +77,9 @@
         <div class="overview__teams-item">
           <p class="overview__teams-item-title">Kaiteki</p>
           <div class="overview__teams-avatars">
-            <img
-              src="avatar1.png"
-              alt="Avatar 1"
-              class="overview__teams-avatar"
-            />
-            <img
-              src="avatar2.png"
-              alt="Avatar 2"
-              class="overview__teams-avatar"
-            />
-            <img
-              src="avatar3.png"
-              alt="Avatar 3"
-              class="overview__teams-avatar"
-            />
+            <img alt="Avatar 1" class="overview__teams-avatar" />
+            <img alt="Avatar 2" class="overview__teams-avatar" />
+            <img alt="Avatar 3" class="overview__teams-avatar" />
 
             <div class="overview__teams-avatar more">+3</div>
           </div>
@@ -100,21 +88,9 @@
         <div class="overview__teams-item">
           <p class="overview__teams-item-title">Victu</p>
           <div class="overview__teams-avatars">
-            <img
-              src="avatar1.png"
-              alt="Avatar 1"
-              class="overview__teams-avatar"
-            />
-            <img
-              src="avatar2.png"
-              alt="Avatar 2"
-              class="overview__teams-avatar"
-            />
-            <img
-              src="avatar3.png"
-              alt="Avatar 3"
-              class="overview__teams-avatar"
-            />
+            <img alt="Avatar 1" class="overview__teams-avatar" />
+            <img alt="Avatar 2" class="overview__teams-avatar" />
+            <img alt="Avatar 3" class="overview__teams-avatar" />
 
             <div class="overview__teams-avatar more">+3</div>
           </div>
