--- a/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chats-sidebar/chats-sidebar.component.html
@@ -27,49 +27,57 @@
   </form>
 
   <ng-container *ngIf="chats$ | async as chats">
-    <div class="sidebar__list desktop">
-      <div
-        *ngFor="let chat of chats"
-        class="sidebar__item"
-        [class.sidebar__item-active]="currentChatRoom?.id === chat.id"
-        (click)="onSelectChat(chat)"
-      >
-        <img class="sidebar__item-icon" [src]="chat.iconId" alt="icon" />
+    <ng-container
+      *ngIf="{ value: (currentChatRoom$ | async) } as currentChatRoomObs"
+    >
+      <div class="sidebar__list desktop">
+        <div
+          *ngFor="let chat of chats; trackBy: chatsTrackBy"
+          class="sidebar__item"
+          [class.sidebar__item-active]="
+            currentChatRoomObs.value?.id === chat.id
+          "
+          (click)="onSelectChat(chat)"
+        >
+          <img class="sidebar__item-icon" [src]="chat.iconId" alt="icon" />
 
-        <div class="sidebar__item-details">
-          <div class="sidebar__item-header">
-            <p class="sidebar__item-header-label">{{ chat.name }}</p>
-            <p class="sidebar__item-header-time" *ngIf="chat.lastMessageDate">
-              {{ chat.lastMessageDate | date : "HH:mm" }}
-            </p>
-          </div>
-          <div class="sidebar__item-body" *ngIf="chat.lastMessageContent">
-            {{ chat.lastMessageContent }}
+          <div class="sidebar__item-details">
+            <div class="sidebar__item-header">
+              <p class="sidebar__item-header-label">{{ chat.name }}</p>
+              <p class="sidebar__item-header-time" *ngIf="chat.lastMessageDate">
+                {{ chat.lastMessageDate | date : "HH:mm" }}
+              </p>
+            </div>
+            <div class="sidebar__item-body" *ngIf="chat.lastMessageContent">
+              {{ chat.lastMessageContent }}
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="sidebar__list mobile">
-      <div
-        *ngFor="let chat of chats"
-        [routerLink]="[chat.id]"
-        class="sidebar__item"
-        [class.sidebar__item-active]="currentChatRoom?.id === chat.id"
-      >
-        <img class="sidebar__item-icon" [src]="chat.iconId" alt="icon" />
-        <div class="sidebar__item-details">
-          <div class="sidebar__item-header">
-            <p class="sidebar__item-header-label">{{ chat.name }}</p>
-            <p class="sidebar__item-header-time" *ngIf="chat.lastMessageDate">
-              {{ chat.lastMessageDate | date : "HH:mm" }}
-            </p>
-          </div>
-          <div class="sidebar__item-body" *ngIf="chat.lastMessageContent">
-            {{ chat.lastMessageContent }}
+      <div class="sidebar__list mobile">
+        <div
+          *ngFor="let chat of chats; trackBy: chatsTrackBy"
+          [routerLink]="[chat.id]"
+          class="sidebar__item"
+          [class.sidebar__item-active]="
+            currentChatRoomObs.value?.id === chat.id
+          "
+        >
+          <img class="sidebar__item-icon" [src]="chat.iconId" alt="icon" />
+          <div class="sidebar__item-details">
+            <div class="sidebar__item-header">
+              <p class="sidebar__item-header-label">{{ chat.name }}</p>
+              <p class="sidebar__item-header-time" *ngIf="chat.lastMessageDate">
+                {{ chat.lastMessageDate | date : "HH:mm" }}
+              </p>
+            </div>
+            <div class="sidebar__item-body" *ngIf="chat.lastMessageContent">
+              {{ chat.lastMessageContent }}
+            </div>
           </div>
         </div>
-      </div>
-    </div>
+      </div></ng-container
+    >
   </ng-container>
 </aside>
