--- a/frontend/src/app/teams/submodules/dashboard/components/views/dashboard-cards-view/dashboard-cards-view.component.html
+++ b/frontend/src/app/teams/submodules/dashboard/components/views/dashboard-cards-view/dashboard-cards-view.component.html
@@ -1,5 +1,5 @@
 <div class="dashboard__cards">
-  <ng-container *ngFor="let member of members">
+  <ng-container *ngFor="let member of members; trackBy: trackByTeamMembers">
     <div *ngIf="member" class="dashboard-card__item">
       <img
         [src]="member.avatarUrl"
