--- a/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.scss
+++ b/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.scss
@@ -5,4 +5,18 @@
     margin-top: 22px;
     margin-bottom: 50px;
   }
+
+  &__empty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+
+    & p {
+      font-size: 14px;
+      font-weight: 400;
+      color: #bdbdbd;
+      text-transform: capitalize;
+    }
+  }
 }
