--- a/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/tasks/components/tasks-toolbar/tasks-toolbar.component.html
@@ -22,7 +22,7 @@
       (click)="onAddNewClick($event)"
       icon="add"
     >
-      <p>Add New</p>
+      <p>Add</p>
     </app-button>
   </div>
 </div>
