--- a/frontend/src/assets/styles/_vars.scss
+++ b/frontend/src/assets/styles/_vars.scss
@@ -61,7 +61,7 @@ $background: #1b1b1b;
 $background-sidebar: #1b1b1b;
 $background-light: rgb(248, 249, 250);
 $background-navbar: #1b1b1b;
-$border-color: #dde4e1;
+$border-color: #e6eeea;
 $border-color-dark: #aab1ae;
 $background-active: #0d0e10;
 $background-active-light: #ebedef;
