--- a/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
+++ b/frontend/src/app/teams/submodules/files/pages/files-list/files-list.component.html
@@ -4,19 +4,27 @@
   <app-files-filter (onFilter)="onFilter($event)"></app-files-filter>
 
   <div class="files__content" *ngIf="files$ | async as files">
-    <ng-container [ngSwitch]="filter.view">
-      <app-files-list-view
-        *ngSwitchCase="'list'"
-        [files]="files"
-      ></app-files-list-view>
+    <ng-container *ngIf="files.length > 0; else emptyFiles">
+      <ng-container [ngSwitch]="filter.view">
+        <app-files-list-view
+          *ngSwitchCase="'list'"
+          [files]="files"
+        ></app-files-list-view>
 
-      <app-files-table-view
-        *ngSwitchCase="'table'"
-        [files]="files"
-      ></app-files-table-view>
+        <app-files-table-view
+          *ngSwitchCase="'table'"
+          [files]="files"
+        ></app-files-table-view>
+      </ng-container>
+
+      <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
+      </app-paginator>
     </ng-container>
   </div>
-
-  <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
-  </app-paginator>
 </section>
+
+<ng-template #emptyFiles>
+  <div class="files__empty">
+    <p>No files found</p>
+  </div>
+</ng-template>
