--- a/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
+++ b/frontend/src/app/teams/submodules/meetings/components/meetings-toolbar/meetings-toolbar.component.html
@@ -21,7 +21,7 @@
       icon="add"
       (click)="onCreateButtonClick($event)"
     >
-      <p>Add New</p>
+      <p>Add</p>
     </app-button>
   </div>
 </div>
