--- a/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
+++ b/frontend/src/app/teams/submodules/posts/pages/posts/posts.component.html
@@ -8,28 +8,40 @@
         <ng-container *ngIf="posts.length > 0; else emptyPosts">
           <app-posts-list-view [posts]="posts"></app-posts-list-view>
         </ng-container>
-      </ng-container>
-    </div>
 
-    <app-paginator (onPage)="onPage($event)" [pagination]="pagination">
-    </app-paginator>
-  </div>
-
-  <div class="posts__sidebar">
-    <div class="posts__content-header">
-      <h1>Favourites</h1>
-    </div>
-
-    <div class="posts__content">
-      <ng-container *ngIf="likedPosts$ | async as likedPosts">
-        <app-posts-list-view [posts]="likedPosts"></app-posts-list-view>
+        <app-paginator
+          *ngIf="posts.length > 0"
+          (onPage)="onPage($event)"
+          [pagination]="pagination"
+        >
+        </app-paginator>
       </ng-container>
     </div>
   </div>
+
+  <ng-container *ngIf="likedPosts$ | async as likedPosts">
+    <div class="posts__sidebar">
+      <div class="posts__content-header">
+        <h1>Favourites</h1>
+      </div>
+
+      <div class="posts__content">
+        <ng-container *ngIf="likedPosts.length > 0; else emptyFavPosts">
+          <app-posts-list-view [posts]="likedPosts"></app-posts-list-view>
+        </ng-container>
+      </div>
+    </div>
+  </ng-container>
 </section>
 
 <ng-template #emptyPosts>
   <div class="posts__empty">
     <p>No posts found</p>
+  </div>
+</ng-template>
+
+<ng-template #emptyFavPosts>
+  <div class="posts__empty-favorites">
+    <p>Liked posts not found</p>
   </div>
 </ng-template>
