--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,5 @@
 @use "@angular/material" as mat;
+@use "@ng-matero/extensions" as mtx;
 
 // FONTS
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@@ -19,6 +20,7 @@
 @include mat.all-component-themes($kaiteki-frontend-theme);
 @include mat.button-typography($kaiteki-frontend-typography);
 @include mat.typography-hierarchy($kaiteki-frontend-typography);
+@include mtx.all-component-themes($kaiteki-frontend-theme);
 
 :root {
   .mat-typography p,
