--- a/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
+++ b/frontend/src/app/kaizen/pages/kaizen-home/kaizen-home.component.html
@@ -2,70 +2,62 @@
 
 <section class="page kaizen">
 	<ng-container *ngIf="!isVoiceAssistantMode()">
-		<div class="kaizen__messages">
-			<div class="kaizen__request">
-				<p class="kaizen__request-author">You</p>
-				<div class="kaizen__request-box">
-					<p class="kaizen__request-box-text">
-						I need basic implementation of AES cipher with own algorithm in
-						JavaScript. I need to features, encypt and decypt, where it takes
-						plain text and key. Show me full implementation
-					</p>
-				</div>
-			</div>
-
-			<div class="kaizen__response">
-				<div class="kaizen__response-header">
-					<p class="kaizen__response-author">Kaizen</p>
+		<div class="kaizen__messages-wrapper">
+			<div class="kaizen__messages">
+				<div
+					class="kaizen__slogan"
+					*ngIf="!userRequest"
+				>
 					<img
-						src="/assets/images/icons/kaizen-sparkles.svg"
-						alt="sparkles"
+						src="/assets/images/icons/kaizen-logo.svg"
+						alt="Kaizen"
+						class="kaizen__slogan-logo"
 					/>
+
+					<span class="kaizen__slogan-title">
+						Unlock the power of AI with Kaizen.
+					</span>
+					<span class="kaizen__slogan-subtitle">
+						Your questions answered, your tasks automated.
+					</span>
 				</div>
 
-				<div class="kaizen__response-box">
-					<p class="kaizen__response-box-text">
-						This code includes key expansion, sub-byte substitution, word
-						rotation, and a basic S-box. It's a simplified version of the AES
-						algorithm and doesn't include all the steps required for a complete
-						implementation. You can expand upon this to include encryption and
-						decryption functions. Remember, for any real-world usage, it's
-						recommended to use established cryptographic libraries like
-						CryptoJS.
-					</p>
-				</div>
-			</div>
-
-			<div class="kaizen__request">
-				<p class="kaizen__request-author">You</p>
-				<div class="kaizen__request-box">
-					<p class="kaizen__request-box-text">
-						I need basic implementation of AES cipher with own algorithm in
-						JavaScript. I need to features, encypt and decypt, where it takes
-						plain text and key. Show me full implementation
-					</p>
-				</div>
-			</div>
-
-			<div class="kaizen__response">
-				<div class="kaizen__response-header">
-					<p class="kaizen__response-author">Kaizen</p>
-					<img
-						src="/assets/images/icons/kaizen-sparkles.svg"
-						alt="sparkles"
-					/>
+				<div
+					class="kaizen__request"
+					*ngIf="userRequest"
+				>
+					<p class="kaizen__request-author">You</p>
+					<div class="kaizen__request-box">
+						<p class="kaizen__request-box-text">
+							{{ userRequest }}
+						</p>
+					</div>
 				</div>
 
-				<div class="kaizen__response-box">
-					<p class="kaizen__response-box-text">
-						This code includes key expansion, sub-byte substitution, word
-						rotation, and a basic S-box. It's a simplified version of the AES
-						algorithm and doesn't include all the steps required for a complete
-						implementation. You can expand upon this to include encryption and
-						decryption functions. Remember, for any real-world usage, it's
-						recommended to use established cryptographic libraries like
-						CryptoJS.
-					</p>
+				<ngx-skeleton-loader
+					count="1"
+					appearance="line"
+					[theme]="{ height: '200px', 'border-radius': '8px' }"
+					*ngIf="isLoading && !userResponse"
+				/>
+
+				<div
+					class="kaizen__response"
+					*ngIf="userResponse"
+				>
+					<div class="kaizen__response-header">
+						<p class="kaizen__response-author">Kaizen</p>
+						<img
+							src="/assets/images/icons/kaizen-sparkles.svg"
+							alt="sparkles"
+						/>
+					</div>
+
+					<div class="kaizen__response-box">
+						<p class="kaizen__response-box-text">
+							{{ userResponse }}
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
